force-app/main/default/objects/CAMPX__Attendee__c/CAMPX__Attendee__c.object-meta.xml
<CustomObject>
    <description>Captures the information of people attending the event</description>
    <label>Attendee</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Attendee Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>