force-app/main/default/objects/CAMPX__Attendee__c/fields/CAMPX__Email__c.field-meta.xml
<CustomField>
    <fullName>CAMPX__Email__c</fullName>
    <description>The email address of the attendee</description>
    <inlineHelpText>The email address of the attendee</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>