force-app/main/default/objects/CAMPX__Attendee__c/fields/CAMPX__FirstName__c.field-meta.xml
<CustomField>
    <fullName>CAMPX__FirstName__c</fullName>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>