force-app/main/default/objects/CAMPX__Attendee__c/fields/CAMPX__LastName__c.field-meta.xml
<CustomField>
    <fullName>CAMPX__LastName__c</fullName>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>