force-app/main/default/objects/CAMPX__Attendee__c/fields/CAMPX__Ticket_Price__c.field-meta.xml
<CustomField>
    <fullName>CAMPX__Ticket_Price__c</fullName>
    <description>Captures how much the attendee paid for their ticket</description>
    <inlineHelpText>Captures how much the attendee paid for their ticket</inlineHelpText>
    <label>Ticket Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>